--- a/lang/en.json
+++ b/lang/en.json
@@ -14,7 +14,7 @@
         },
         "index": {
             "homeTitle": "introduction",
-            "home": "<b>A Year in Mapping</b> has returned for 2018 to bring you the achievements and accomplishments of the mapping community this part year. <br> <br> Similar to Mapper's Choice Awards, we have expanded our civerage to include statistics and information on all four modes, but this year, we have included storyboarding as well! <br> <br> Furthermore, we have left a few words for every mapper who has ranked a <b>mapset</b> in 2018 to show our appreciation for the members in the mapping community. <br> <br> To get started, click one of the modes on the left!"
+            "home": "<b>A Year in Mapping</b> has returned for 2018 to bring you the achievements and accomplishments of the mapping community this part year. <br> <br> Similar to Mapper's Choice Awards, we have expanded our civerage to include statistics and information on all four modes, but this year, we have included storyboarding as well! <br> <br> Furthermore, we have left a few words for every mapper who has ranked a <b>mapset</b> in 2018 to show our appreciation for the members in the mapping community. <br> <br> To get started, click on one of the modes on the left!"
         }
     }
 }
