update id.json with new "home" translation (#6)
* ID translation

* Delete id.ts

* updated "home" string

--- a/lang/id.json
+++ b/lang/id.json
@@ -14,7 +14,7 @@
         },
         "index": {
             "homeTitle": "pembukaan",
-            "home": "AYIM 2018"
+            "home": "<b>A Year in Mapping</b> kembali diadakan tahun ini untuk memperingati segala rekam jejak dan pencapaian yang telah diukir oleh komunitas osu!mapping dalam kurun waktu satu tahun ke belakang. <br> <br> Seperti halnya pada Mapper's Choice Awards, pada penyelenggaraan A Year in Mapping di tahun ini kami telah memperluas ruang lingkup kami di mana di samping segmen-segmen yang ditujukan untuk keempat mode permainan kini kami juga turut mengikutsertakan segmen khusus storyboarding lho guys! <br> <br> Lebih jauh lagi, pada tahun ini kami juga memberikan apresiasi kami kepada seluruh mapper yang tercatat memiliki setidaknya <b>satu mapset berstatus Ranked</b> pada tahun 2018 atas kontribusi mereka di dalam ranah osu!mapping. <br> <br> Untuk memulai, silakan untuk memilih salah satu pilihan yang tersedia di sisi kiri layar ya guys!"
         }
     }
 }
