--- a/lang/ru.json
+++ b/lang/ru.json
@@ -14,8 +14,7 @@
         },
         "index": {
             "homeTitle": "Введение",
-            "home": "Рады снова представить вам AYIM, в котором мы поделимся с вами достижениями сообщества мапперов за прошедший 2018 год. <br> <br>Так же как и с MCA, в этом году мы затронем все четыре режима игры и сторибординг.  <br> <br>Более того, мы подготовили по паре слов для каждого, кто ранкнул <b>карту<b/> в  2018  год. <br> <br>Чтобы начать нажмите на один из режимов игры слева!
-"
+            "home": "Рады снова представить вам AYIM, в котором мы поделимся с вами достижениями сообщества мапперов за прошедший 2018 год. <br> <br>Так же как и с MCA, в этом году мы затронем все четыре режима игры и сторибординг.  <br> <br>Более того, мы подготовили по паре слов для каждого, кто ранкнул <b>карту<b/> в  2018  год. <br> <br>Чтобы начать нажмите на один из режимов игры слева!"
         }
     }
 }
