--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,5 +1,5 @@
 {
-    "flag": "https://osu.ppy.sh/images/flags/KR.png",
+    "flag": "https://osu.ppy.sh/images/flags/RU.png",
     "ayim": {
         "layout": {
             "mca2018": "2018 MAPPER'S CHOICE AWARDS",
