Update nl.json (#8)
* Update nl.json

index.home translation added

* Update nl.json

index.home bold fix

* Update nl.json

index.home bold fix 1.1

--- a/lang/nl.json
+++ b/lang/nl.json
@@ -14,7 +14,7 @@
         },
         "index": {
             "homeTitle": "introductie",
-            "home": "AYIM 2018"
+            "home": "<b>A Year in Mapping</b> is terug voor 2018 om je de prestaties van de mapping community te laten zien van het afgelopen jaar. <br> <br> Net zoals bij de Mapper’s Choice Awards, hebben we uitgebreid om ook statistieken en informatie van alle vier de modes te laten zien. Dit jaar echter, rekenen we storyboarding ook mee! <br> <br> Verder hebben we een paar woordjes achtergelaten voor iedere mapper die in 2018 een <b>mapset</b> heeft geranked, om zo onze waardering voor de leden van de mapping community te laten zien. <br> <br> Klik om te beginnen op een van de modes aan de linkerkant!"
         }
     }
 }
