change to be more inline with other langs (id)

--- a/lang/id.json
+++ b/lang/id.json
@@ -2,7 +2,7 @@
     "flag": "https://osu.ppy.sh/images/flags/ID.png",
     "ayim": {
         "layout": {
-            "mca2018": "MAPPER'S CHOICE AWARDS 2018",
+            "mca2018": "2018 MAPPER'S CHOICE AWARDS",
             "days": "HARI TERSISA UNTUK MEMILIH",
             "nav": {
                 "standard": "standard",
