update german translation (#10)
* Create de.json

* Update de.json

* Update de.json

why is translating so hard

* Update de.json

--- a/lang/de.json
+++ b/lang/de.json
@@ -14,7 +14,7 @@
         },
         "index": {
             "homeTitle": "Einleitung",
-            "home": "AYIM 2018"
+            "home": "<b>A Year in Mapping</b> kehrt zurück, um euch auch für 2018 die Leistungen der Mapping-Community vorzustellen. <br><br> Wie bei den Mapper's Choice Awards haben wir Statistiken und Informationen für alle vier Modi, aber diese Jahr beziehen wir auch Storyboarding mit ein! <br><br> Ausserdem haben wir einige Worte zu jedem Mapper, welcher in 2018 ein <b>Mapset</b> geranked hat, um die Mitglieder der Mapping-Community zu würdigen. <br><br> Um anzufangen, klicke auf einen der Modi auf der linken Seite!"
         }
     }
 }
