--- a/lang/example.json
+++ b/lang/example.json
@@ -1,20 +1,28 @@
 {
     "flag": "",
-    "ayim": {
-        "layout": {
-            "mca2018": "",
-            "days": "",
-            "nav": {
-                "standard": "",
-                "taiko": "",
-                "fruits": "",
-                "mania": "",
-                "storyboard": ""
-            }
-        },
-        "index": {
-            "homeTitle": "",
-            "home": ""
+    "login": "",
+    "mca": {
+        "main": {
+            "voting": "",
+            "nominating": "",
+            "stage": {
+                "voting": "",
+                "nominating": ""
+            },
+            "rankedSets": "",
+            "voteNow": "",
+            "daysLeft": "",
+            "message": {
+                "1": "",
+                "2": "",
+                "3": "",
+                "4": ""
+            },
+            "categories": {
+                "map": "",
+                "user": ""
+            },
+            "organized": ""
         }
     }
 }
