fix enkrypton json thing

--- a/lang/example.json
+++ b/lang/example.json
@@ -25,7 +25,7 @@
             },
             "categories": {
                 "map": "",
-                "user": ""
+                "user": "",
 				"approachRate": "",
 				"circleSize": "",
 				"overallDifficulty": ""
