--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,25 @@
 {
     "flag": "https://osu.ppy.sh/images/flags/GB.png",
     "login": "LOG IN",
-    "mca": {
+    "mca_ayim": {
+        "header": {
+            "mca": "MAPPER'S <br> CHOICE <br> AWARDS",
+            "ayim": "A YEAR <br> IN <br> MAPPING",
+            "login": "LOG IN",
+            "welcomeBack": "welcome back",
+            "logout": "LOGOUT"
+        },
+        "login": {
+            "login": "login",
+            "message": {
+                "1": "It seems that you are not logged in!<br>Simply login with osu! and you can start voting/nominating immediately!",
+                "2": "You may login on discord in addition as well after.<br>This is required for staff members or ones who ranked 0 sets and only guest difficulties who want to vote/nominate.<br>Logging in discord is <b>not required</b> to vote/nominate.</span>"
+            },
+            "authOsu": "click here to authenticate with osu!",
+            "authOsuComp": "osu! verification complete. Hi ",
+            "authDiscord": "click here to authenticate with discord",
+            "authDiscordComp": "Discord verification complete. Hi "
+        },
         "main": {
             "voting": "voting",
             "nominating": "nominating",
