--- a/lang/id.json
+++ b/lang/id.json
@@ -2,6 +2,24 @@
     "flag": "https://osu.ppy.sh/images/flags/ID.png",
     "login": "MASUK",
     "mca_ayim": {
+        "header": {
+            "mca": "",
+            "ayim": "",
+            "login": "",
+            "welcomeBack": "",
+            "logout": ""
+        },
+        "login": {
+            "login": "",
+            "message": {
+                "1": "",
+                "2": ""
+            },
+            "authOsu": "",
+            "authOsuComp": "",
+            "authDiscord": "",
+            "authDiscordComp": ""
+        },
         "main": {
             "voting": "voting",
             "nominating": "nominasi",
